--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -2,9 +2,23 @@ body {
   padding: 0;
   margin: 0; }
 
+.marker {
+  width: 50px;
+  height: 35px; }
+
 .all-animals {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
+
+.filtered-animals {
+  display: flex;
   flex-wrap: wrap; }
+
+.animals {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around; }
 
 .animal-card {
   padding-bottom: 10px;
@@ -12,7 +26,7 @@ body {
   width: 410px;
   justify-content: space-around; }
 
-img {
+.animal-images {
   width: 400px; }
 
 /*# sourceMappingURL=style.scss.map */
