--- a/front-end/project-front-end/scss/layout.scss
+++ b/front-end/project-front-end/scss/layout.scss
@@ -3,10 +3,26 @@ body{
   margin: 0;
 }
 
+.marker{
+  width: 50px;
+  height: 35px;
+}
 
 .all-animals{
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.filtered-animals{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.animals{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .animal-card{
@@ -16,6 +32,6 @@ body{
   justify-content: space-around;
 }
 
-img{
+.animal-images{
   width: 400px;
 }
