--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -21,12 +21,52 @@ body {
   justify-content: space-around; }
 
 .animal-card {
-  padding-bottom: 10px;
-  padding-top: 10px;
+  margin: 5px;
+  height: 600px;
   width: 410px;
-  justify-content: space-around; }
+  justify-content: space-around;
+  border: solid #7bb2d9;
+  overflow: auto;
+  justify-content: center; }
 
 .animal-images {
-  width: 400px; }
+  margin: 0;
+  height: 20pc;
+  width: 20pc;
+  object-fit: scale-down;
+  margin-left: 40px;
+  margin-right: auto; }
+
+.map {
+  display: flex;
+  justify-content: space-around; }
+
+.p-tag {
+  display: flex;
+  flex-wrap: wrap;
+  font-family: "Red Hat Display", sans-serif;
+  font-size: 150%; }
+
+.header-three {
+  font-family: "Hind Madurai", sans-serif;
+  font-size: 200%; }
+
+.header-four {
+  font-family: "Hind Madurai", sans-serif;
+  font-size: 150%; }
+
+.header-five {
+  font-family: "Hind Madurai", sans-serif;
+  font-size: 150%; }
+
+.main-header {
+  text-align: center; }
+
+.animal-header {
+  text-align: center; }
+
+.link {
+  font-family: "Merriweather Sans", sans-serif;
+  font-size: 230%; }
 
 /*# sourceMappingURL=style.scss.map */
