--- a/front-end/project-front-end/scss/base.scss
+++ b/front-end/project-front-end/scss/base.scss
@@ -1,5 +1,6 @@
 $font-heading: 'Merriweather Sans', sans-serif;
 $font-text-primary: 'Red Hat Display', sans-serif;
+$font-text-secondary: 'Hind Madurai', sans-serif;
 $color-text-primary: #2A2B2A;
 $color-background-headings: #A7BED3;
 $color-background: #44633F;
