--- a/front-end/project-front-end/scss/header.scss
+++ b/front-end/project-front-end/scss/header.scss
@@ -6,7 +6,16 @@
   text-align: center;
 }
 
+.animal-link{
+  font-family: $font-heading;
+  font-size: 175%;
+  color: $color-text-primary;
+  text-decoration: none;
+}
+
 .link{
   font-family: $font-heading;
-  font-size: 230%;
+  font-size: 200%;
+  color: $color-text-primary;
+  text-decoration: none;
 }
