took border and background off of map markers.

--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -77,6 +77,29 @@ body {
   color: #2A2B2A;
   text-decoration: none; }
 
+.home-page {
+  display: flex;
+  flex-flow: column;
+  padding-top: 30px; }
+
+.create-account {
+  display: flex;
+  flex-direction: row; }
+
+.login {
+  display: flex;
+  align-items: center; }
+
+.button {
+  font-family: "Red Hat Display", sans-serif;
+  font-size: 150%;
+  background-color: #7880B5;
+  border-radius: 12px; }
+
+.marker-btn {
+  background: none;
+  border: none; }
+
 .region-container {
   flex-wrap: wrap; }
 
@@ -89,7 +112,8 @@ body {
   text-align: center;
   font-family: "Hind Madurai", sans-serif;
   font-size: 175%;
-  color: #44633F; }
+  color: #2A2B2A;
+  opacity: 1; }
 
 .p-tag {
   justify-content: space-around;
