--- a/front-end/project-front-end/scss/base.scss
+++ b/front-end/project-front-end/scss/base.scss
@@ -5,3 +5,4 @@ $color-text-primary: #2A2B2A;
 $color-background-headings: #A7BED3;
 $color-background: #44633F;
 $dark-color-primary: #44633F;
+$button-color: #7880B5;
