--- a/front-end/project-front-end/scss/regioncard.scss
+++ b/front-end/project-front-end/scss/regioncard.scss
@@ -12,7 +12,8 @@
   text-align: center;
   font-family: $font-text-secondary;
   font-size: 175%;
-  color: $color-background;
+  color: $color-text-primary;
+  opacity: 1;
 }
 
 .p-tag{
