--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -100,6 +100,10 @@ body {
   background: none;
   border: none; }
 
+.marker-btn:hover {
+  position: relative;
+  top: -5px; }
+
 .region-container {
   flex-wrap: wrap; }
 
