--- a/front-end/project-front-end/scss/regioncard.scss
+++ b/front-end/project-front-end/scss/regioncard.scss
@@ -12,8 +12,9 @@
   text-align: center;
   font-family: $font-text-secondary;
   font-size: 175%;
-  color: $color-text-primary;
+  color: black;
   opacity: 1;
+  // text-shadow: 2px 2px gray;
 }
 
 .p-tag{
