--- a/front-end/project-front-end/scss/main.scss
+++ b/front-end/project-front-end/scss/main.scss
@@ -1,9 +1,8 @@
 @import "base.scss";
 @import "mixin.scss";
-@import "layout.scss";
+@import "animals.scss";
 @import "header.scss";
 @import "home.scss";
-@import "animalcard.scss";
 @import "map.scss";
 @import "notescard.scss";
 @import "regioncard.scss";
