styled animals cards more and add hover effects.

--- a/front-end/project-front-end/scss/map.scss
+++ b/front-end/project-front-end/scss/map.scss
@@ -25,3 +25,13 @@
 .map-link:hover{
   opacity: .4;
 }
+
+.map{
+  margin-top: 40px;
+  border: solid;
+  border-radius: 15px 50px;
+}
+
+.react-map{
+  border-radius: 12px 46px;
+}
