--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -9,6 +9,7 @@ body {
 .all-animals {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 10px;
   justify-content: space-around; }
 
 .filtered-animals {
@@ -20,17 +21,20 @@ body {
   flex-wrap: wrap;
   justify-content: space-around; }
 
-.animal-card:hover {
-  box-shadow: #7880B5; }
-
 .animal-card {
   margin: 5px;
   height: 600px;
   width: 410px;
   justify-content: space-around;
   border: solid #7bb2d9;
+  border-radius: 15px 50px;
   overflow: auto;
   justify-content: center; }
+
+.animal-card:hover {
+  position: relative;
+  top: -10px;
+  border-color: #339989; }
 
 .animal-images {
   margin: 0;
@@ -77,7 +81,8 @@ body {
   text-align: center; }
 
 .animal-header {
-  text-align: center; }
+  text-align: center;
+  padding-bottom: 10px; }
 
 .animal-link {
   font-family: "Merriweather Sans", sans-serif;
@@ -139,14 +144,40 @@ body {
 .map-link:hover {
   opacity: .4; }
 
+.map {
+  margin-top: 40px;
+  border: solid;
+  border-radius: 15px 50px; }
+
+.react-map {
+  border-radius: 12px 46px; }
+
 .notes-container {
-  padding-top: 40px;
-  display: grid; }
+  padding-top: 40px; }
 
 .notes-card {
-  padding-top: 30px;
-  border-radius: 10px;
-  border: solid; }
+  margin: 5px;
+  height: 200px;
+  width: 410px;
+  justify-content: space-around;
+  overflow-y: scroll;
+  border: solid #7bb2d9;
+  border-radius: 15px 50px;
+  justify-content: center; }
+
+.header-two {
+  text-align: center; }
+
+.input {
+  font-size: 10px; }
+
+.notes-p-tag {
+  display: flex;
+  flex-wrap: wrap;
+  font-family: "Red Hat Display", sans-serif;
+  font-size: 150%;
+  height: 150px;
+  text-align: center; }
 
 .region-container {
   flex-wrap: wrap; }
