--- a/front-end/project-front-end/scss/animals.scss
+++ b/front-end/project-front-end/scss/animals.scss
@@ -11,6 +11,7 @@ body{
 .all-animals{
   display: flex;
   flex-wrap: wrap;
+  padding-top: 10px;
   justify-content: space-around;
 }
 
@@ -25,18 +26,21 @@ body{
   justify-content: space-around;
 }
 
-.animal-card:hover{
-  box-shadow: $button-color
-}
-
 .animal-card{
   margin: 5px;
   height: 600px;
   width: 410px;
   justify-content: space-around;
   border: solid #7bb2d9;
+  border-radius: 15px 50px;
   overflow: auto;
   justify-content: center;
+}
+
+.animal-card:hover{
+  position: relative;
+  top: -10px;
+  border-color: #339989;
 }
 
 .animal-images{
@@ -80,8 +84,6 @@ body{
 
 .fish{
   display: transparent;
-  // flex-wrap: wrap;
-  // justify-content: space-around;
   height: auto;
   width:auto;
   background-image: url("https://photos.app.goo.gl/qiPrQULUgfUbocsv9");
