--- a/front-end/project-front-end/scss/animals.scss
+++ b/front-end/project-front-end/scss/animals.scss
@@ -18,6 +18,8 @@ body{
 .filtered-animals{
   display: flex;
   flex-wrap: wrap;
+  padding-top: 10px;
+  justify-content: space-around;
 }
 
 .animals{
