--- a/front-end/project-front-end/scss/main.scss
+++ b/front-end/project-front-end/scss/main.scss
@@ -2,7 +2,7 @@
 @import "mixin.scss";
 @import "animals.scss";
 @import "header.scss";
-@import "home.scss";
+@import "loginlogout.scss";
 @import "map.scss";
 @import "notescard.scss";
 @import "regioncard.scss";
