adding background color to animal cards.

--- a/front-end/project-front-end/scss/animals.scss
+++ b/front-end/project-front-end/scss/animals.scss
@@ -13,6 +13,7 @@ body{
   flex-wrap: wrap;
   padding-top: 10px;
   justify-content: space-around;
+  background-color: #E9EBF8;
 }
 
 .filtered-animals{
@@ -20,6 +21,11 @@ body{
   flex-wrap: wrap;
   padding-top: 10px;
   justify-content: space-around;
+  background-color: #E9EBF8;
+}
+
+.mammals{
+  background-color: #E9EBF8;
 }
 
 .animals{
@@ -37,6 +43,7 @@ body{
   border-radius: 15px 50px;
   overflow: auto;
   justify-content: center;
+  background-color: white;
 }
 
 .animal-card:hover{
