--- a/front-end/project-front-end/scss/base.scss
+++ b/front-end/project-front-end/scss/base.scss
@@ -6,3 +6,4 @@ $color-background-headings: #B8E0D2;
 $color-background: #44633F;
 $dark-color-primary: #44633F;
 $button-color: #7880B5;
+$card-background-color: #EDBFB7;
