--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -10,13 +10,18 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding-top: 10px;
-  justify-content: space-around; }
+  justify-content: space-around;
+  background-color: #E9EBF8; }
 
 .filtered-animals {
   display: flex;
   flex-wrap: wrap;
   padding-top: 10px;
-  justify-content: space-around; }
+  justify-content: space-around;
+  background-color: #E9EBF8; }
+
+.mammals {
+  background-color: #E9EBF8; }
 
 .animals {
   display: flex;
@@ -31,7 +36,8 @@ body {
   border: solid #7bb2d9;
   border-radius: 15px 50px;
   overflow: auto;
-  justify-content: center; }
+  justify-content: center;
+  background-color: white; }
 
 .animal-card:hover {
   position: relative;
@@ -88,13 +94,13 @@ body {
 
 .animal-link {
   font-family: "Merriweather Sans", sans-serif;
-  font-size: 175%;
+  font-size: 155%;
   color: #2A2B2A;
   text-decoration: none; }
 
 .link {
   font-family: "Merriweather Sans", sans-serif;
-  font-size: 200%;
+  font-size: 175%;
   color: #2A2B2A;
   text-decoration: none; }
 
@@ -103,18 +109,11 @@ body {
   flex-flow: column;
   padding-top: 30px; }
 
-.create-account {
-  display: flex;
-  flex-direction: row; }
-
-.login {
-  display: flex;
-  align-items: center; }
-
 .button {
-  font-family: "Red Hat Display", sans-serif;
+  font-family: "Merriweather Sans", sans-serif;
   font-size: 125%;
-  border-radius: 10%; }
+  border-radius: 10%;
+  background-color: #B8E0D2; }
 
 .button:active {
   color: #B8E0D2; }
@@ -122,6 +121,13 @@ body {
 .header-three-login {
   font-family: "Red Hat Display", sans-serif;
   font-size: 125%; }
+
+.home-section {
+  border: solid;
+  border-radius: 15px 50px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center; }
 
 .marker-btn {
   background: none;
@@ -135,6 +141,12 @@ body {
   display: grid;
   width: 50%; }
 
+.title {
+  text-align: center;
+  font-family: "Hind Madurai", sans-serif;
+  font-size: 450%;
+  margin-top: 40px; }
+
 .map-link {
   text-decoration: none;
   font-family: "Merriweather Sans", sans-serif;
@@ -147,7 +159,7 @@ body {
   opacity: .4; }
 
 .map {
-  margin-top: 40px;
+  margin-top: 30px;
   border: solid;
   border-color: #0E34A0;
   border-radius: 15px 50px; }
@@ -159,15 +171,16 @@ body {
   padding-top: 40px; }
 
 .notes-card {
-  margin: 5px;
+  margin: 5px 5px 5px 5px;
   height: 200px;
   width: 410px;
   justify-content: space-around;
   overflow-y: scroll;
-  border: solid #7bb2d9;
+  border: solid #5BBA6F;
   border-radius: 15px 50px;
   justify-content: center;
-  text-align: center; }
+  text-align: center;
+  background-color: #EDBFB7; }
 
 .header-two {
   text-align: center; }
@@ -180,7 +193,7 @@ body {
   flex-wrap: wrap;
   font-family: "Red Hat Display", sans-serif;
   font-size: 150%;
-  height: 150px;
+  width: 400px;
   text-align: center; }
 
 .region-container {
