--- a/front-end/project-front-end/scss/loginlogout.scss
+++ b/front-end/project-front-end/scss/loginlogout.scss
@@ -1,30 +1,29 @@
-.home-page{
+.home-page {
   display: flex;
   flex-flow: column;
   padding-top: 30px;
 }
 
-.create-account{
-  display: flex;
-  flex-direction: row;
-}
-
-.login{
-  display: flex;
-  align-items: center;
-}
-
-.button{
-  font-family: $font-text-primary;
+.button {
+  font-family: $font-heading;
   font-size: 125%;
   border-radius: 10%;
+  background-color: $color-background-headings;
 }
 
-.button:active{
+.button:active {
   color: $color-background-headings;
 }
 
-.header-three-login{
+.header-three-login {
   font-family: $font-text-primary;
   font-size: 125%;
+}
+
+.home-section {
+  border: solid;
+  border-radius: 15px 50px;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
 }
