--- a/front-end/project-front-end/scss/map.scss
+++ b/front-end/project-front-end/scss/map.scss
@@ -13,6 +13,13 @@
   width: 50%;
 }
 
+.title{
+  text-align: center;
+  font-family: $font-text-secondary;
+  font-size: 450%;
+  margin-top: 40px;
+}
+
 .map-link{
   text-decoration: none;
   font-family: $font-heading;
@@ -27,7 +34,7 @@
 }
 
 .map{
-  margin-top: 40px;
+  margin-top: 30px;
   border: solid;
   border-color: #0E34A0;
   border-radius: 15px 50px;
