--- a/front-end/project-front-end/scss/notescard.scss
+++ b/front-end/project-front-end/scss/notescard.scss
@@ -4,15 +4,17 @@
 }
 
 .notes-card{
-  margin: 5px;
+  margin: 5px 5px 5px 5px;
+  // margin-bottom: 10px;
   height: 200px;
   width: 410px;
   justify-content: space-around;
   overflow-y: scroll;
-  border: solid #7bb2d9;
+  border: solid #5BBA6F;
   border-radius: 15px 50px;
   justify-content: center;
   text-align: center;
+  background-color: $card-background-color;
 }
 
 .header-two{
@@ -28,6 +30,6 @@
   flex-wrap: wrap;
   font-family: $font-text-primary;
   font-size: 150%;
-  height: 150px;
+  width: 400px;
   text-align: center;
 }
