found animal backgrounds that didn't have the color I wanted. now fixed.

--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -20,7 +20,7 @@ body {
   justify-content: space-around;
   background-color: #E9EBF8; }
 
-.mammals {
+.animal-background {
   background-color: #E9EBF8; }
 
 .animals {
