--- a/front-end/project-front-end/scss/loginlogout.scss
+++ b/front-end/project-front-end/scss/loginlogout.scss
@@ -7,7 +7,8 @@
 .button {
   font-family: $font-heading;
   font-size: 125%;
-  border-radius: 10%;
+  border-radius: 5px;
+  border: none;
   background-color: $color-background-headings;
 }
 
