--- a/front-end/project-front-end/scss/notescard.scss
+++ b/front-end/project-front-end/scss/notescard.scss
@@ -1,6 +1,9 @@
 .notes-container{
   padding-top: 40px;
-  // display: grid;
+  background-color: #F7EBEC;
+  height: 100%;
+  width: 75vw;
+  justify-content: center;
 }
 
 .notes-card{
@@ -12,9 +15,8 @@
   overflow-y: scroll;
   border: solid #5BBA6F;
   border-radius: 15px 50px;
-  justify-content: center;
+  // justify-content: center;
   text-align: center;
-  background-color: $card-background-color;
 }
 
 .header-two{
