--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -169,31 +169,48 @@ body {
   border-radius: 12px 46px; }
 
 .notes-container {
+  display: flex;
+  flex-wrap: flex;
+  flex-flow: column-reverse;
   padding-top: 40px;
   background-color: #F7EBEC;
   height: 100%;
-  width: 75vw;
-  justify-content: center; }
+  align-content: center; }
 
 .notes-card {
+  display: flex;
   margin: 5px 5px 5px 5px;
   height: 200px;
   width: 410px;
-  justify-content: space-around;
   overflow-y: scroll;
   border: solid #5BBA6F;
-  border-radius: 15px 50px;
-  text-align: center; }
+  border-radius: 15px 50px; }
 
 .header-two {
-  text-align: center; }
+  text-align: center;
+  width: 400px; }
+
+.note-background {
+  padding: 10px;
+  background-color: #F7EBEC; }
 
 .input {
-  font-size: 10px; }
+  font-size: 10px;
+  height: 20px; }
+
+.new-input {
+  border-radius: 20px;
+  height: 30px;
+  font-size: 20px; }
+
+.textarea {
+  border: none;
+  height: 100px;
+  width: 300px;
+  border-radius: 20px; }
 
 .notes-p-tag {
   display: flex;
-  flex-wrap: wrap;
   font-family: "Red Hat Display", sans-serif;
   font-size: 150%;
   width: 400px;
