--- a/front-end/project-front-end/scss/notescard.scss
+++ b/front-end/project-front-end/scss/notescard.scss
@@ -1,35 +1,58 @@
 .notes-container{
+  display: flex;
+  flex-wrap: flex;
+  flex-flow: column-reverse;
   padding-top: 40px;
   background-color: #F7EBEC;
   height: 100%;
-  width: 75vw;
-  justify-content: center;
+  align-content: center;
+
+  // width: 75vw;
+  // content: normal;
 }
 
 .notes-card{
+  display: flex;
+
   margin: 5px 5px 5px 5px;
-  // margin-bottom: 10px;
   height: 200px;
   width: 410px;
-  justify-content: space-around;
   overflow-y: scroll;
   border: solid #5BBA6F;
   border-radius: 15px 50px;
-  // justify-content: center;
-  text-align: center;
 }
 
 .header-two{
   text-align: center;
+  width: 400px;
+}
+
+.note-background{
+  padding: 10px;
+  background-color: #F7EBEC;
 }
 
 .input{
   font-size: 10px;
+  height: 20px;
+}
+
+.new-input{
+  border-radius: 20px;
+  height: 30px;
+  font-size: 20px;
+
+}
+
+.textarea{
+  border: none;
+  height: 100px;
+  width: 300px;
+  border-radius: 20px;
 }
 
 .notes-p-tag{
   display: flex;
-  flex-wrap: wrap;
   font-family: $font-text-primary;
   font-size: 150%;
   width: 400px;
