--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -116,8 +116,8 @@ body {
   border: none;
   background-color: #B8E0D2; }
 
-.button:active {
-  color: #B8E0D2; }
+.button:hover {
+  opacity: .4; }
 
 .header-three-login {
   font-family: "Red Hat Display", sans-serif;
@@ -128,6 +128,14 @@ body {
   border-radius: 15px 50px;
   margin: 10px;
   padding: 10px;
+  text-align: center; }
+
+.home-input {
+  border-radius: 10px;
+  height: 20px;
+  font-size: 19px; }
+
+.home-h3 {
   text-align: center; }
 
 .marker-btn {
@@ -170,11 +178,9 @@ body {
 
 .notes-container {
   display: flex;
-  flex-wrap: flex;
-  flex-flow: column-reverse;
-  padding-top: 40px;
+  flex-wrap: wrap;
+  flex-direction: row;
   background-color: #F7EBEC;
-  height: 100%;
   align-content: center; }
 
 .notes-card {
@@ -183,6 +189,7 @@ body {
   height: 200px;
   width: 410px;
   overflow-y: scroll;
+  background-color: white;
   border: solid #5BBA6F;
   border-radius: 15px 50px; }
 
@@ -190,13 +197,24 @@ body {
   text-align: center;
   width: 400px; }
 
+.new-textarea {
+  height: 100px;
+  width: 135px;
+  font-size: 15px;
+  overflow: auto; }
+
 .note-background {
-  padding: 10px;
-  background-color: #F7EBEC; }
+  display: flex;
+  padding-top: 10px;
+  background-color: #F7EBEC;
+  height: 25vh;
+  width: 100vw;
+  justify-content: center; }
 
 .input {
-  font-size: 10px;
-  height: 20px; }
+  font-size: 15px;
+  height: 20px;
+  width: 135px; }
 
 .new-input {
   border-radius: 20px;
@@ -207,7 +225,8 @@ body {
   border: none;
   height: 100px;
   width: 300px;
-  border-radius: 20px; }
+  font-size: 15px;
+  border-radius: 5px; }
 
 .notes-p-tag {
   display: flex;
