delete button in Home.js was not calling the passed down function properly. Now the delete function works again.

--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -132,9 +132,11 @@ body {
   border-color: #BBC7CE; }
 
 .home-input {
+  margin-bottom: 10px;
   border-radius: 10px;
   height: 20px;
-  font-size: 19px; }
+  font-size: 19px;
+  content: center; }
 
 .home-h3 {
   text-align: center; }
