--- a/front-end/project-front-end/scss/loginlogout.scss
+++ b/front-end/project-front-end/scss/loginlogout.scss
@@ -31,9 +31,11 @@
 }
 
 .home-input{
+  margin-bottom: 10px;
   border-radius: 10px;
   height: 20px;
   font-size: 19px;
+  content: center;
 }
 
 .home-h3{
