--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -199,12 +199,13 @@ body {
 .region-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; }
+  justify-content: center;
+  background-color: #DCEAB2; }
 
 .region-card {
   flex-flow: wrap;
   margin: 5px;
-  height: 500px;
+  height: 400px;
   width: 410px;
   justify-content: space-between;
   border: solid #7bb2d9;
@@ -212,6 +213,10 @@ body {
   overflow: auto;
   justify-content: center;
   background-color: white; }
+
+.region-card:hover {
+  position: relative;
+  top: -10px; }
 
 .region-header-three {
   text-align: center;
