--- a/front-end/project-front-end/scss/notescard.scss
+++ b/front-end/project-front-end/scss/notescard.scss
@@ -1,11 +1,24 @@
 .notes-container{
+  display: flex;
+  flex-wrap: wrap-reverse;
   padding-top: 40px;
-  // display: grid;
+  background-color: #F1E4F3;
+  width: 1500px;
+}
+
+.new-notes-container{
+  justify-content: center;
+  padding-top: 5px;
+  background-color: #F1E4F3;
+  width: 1500px;
+}
+
+.notess-header{
+  display: visible;
 }
 
 .notes-card{
   margin: 5px 5px 5px 5px;
-  // margin-bottom: 10px;
   height: 200px;
   width: 410px;
   justify-content: space-around;
@@ -14,7 +27,7 @@
   border-radius: 15px 50px;
   justify-content: center;
   text-align: center;
-  background-color: $card-background-color;
+  background-color: white;
 }
 
 .header-two{
