login/logout page styled.

--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -125,9 +125,11 @@ body {
 .home-section {
   border: solid;
   border-radius: 15px 50px;
-  margin: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
   padding: 10px;
-  text-align: center; }
+  text-align: center;
+  border-color: #68B0AB; }
 
 .marker-btn {
   background: none;
