--- a/front-end/project-front-end/scss/loginlogout.scss
+++ b/front-end/project-front-end/scss/loginlogout.scss
@@ -23,7 +23,9 @@
 .home-section {
   border: solid;
   border-radius: 15px 50px;
-  margin: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
   padding: 10px;
   text-align: center;
+  border-color: #68B0AB;
 }
