--- a/front-end/project-front-end/css/style.scss
+++ b/front-end/project-front-end/css/style.scss
@@ -124,6 +124,7 @@ body {
 
 .home-section {
   border: solid;
+  font-size: 15x;
   border-radius: 15px 50px;
   margin-top: 20px;
   margin-bottom: 10px;
